--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,66 @@ body {
   @apply debug-screens;
 }
 
+/* Paralax Effect */
+.parallax-effect {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  height: 400px;
+
+  transform-style: preserve-3d;
+}
+
+.inner-element {
+  transform: translateZ(60px);
+}
+
+/* Responsive Typography */
+@media (min-width: 1200px) {
+  .r-1 {
+    font-size: 2.5rem;
+  }
+  ,
+  .r-2 {
+    font-size: 2rem;
+  }
+  ,
+  .r-3 {
+    font-size: 1.75rem;
+  }
+  ,
+  .r-4 {
+    font-size: 1.5rem;
+  }
+  ,
+  .display-1 {
+    font-size: 5rem;
+  }
+  ,
+  .display-2 {
+    font-size: 4.5rem;
+  }
+  ,
+  .display-3 {
+    font-size: 4rem;
+  }
+  ,
+  .display-4 {
+    font-size: 3.5rem;
+  }
+  ,
+  .display-5 {
+    font-size: 3rem;
+  }
+  ,
+  .display-6 {
+    font-size: 2.5rem;
+  }
+}
+/* ./Responsive Typography */
+
 .bg-profitcreations {
   background-attachment: fixed !important;
 }
