--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,49 +4,18 @@
   @apply debug-screens;
 } */
 
-/* Responsive Typography */
-@media (min-width: 1200px) {
-  .r-1 {
-    font-size: 2.5rem;
-  }
-  ,
-  .r-2 {
-    font-size: 2rem;
-  }
-  ,
-  .r-3 {
-    font-size: 1.75rem;
-  }
-  ,
-  .r-4 {
-    font-size: 1.5rem;
-  }
-  ,
-  .display-1 {
-    font-size: 5rem;
-  }
-  ,
-  .display-2 {
-    font-size: 4.5rem;
-  }
-  ,
-  .display-3 {
-    font-size: 4rem;
-  }
-  ,
-  .display-4 {
-    font-size: 3.5rem;
-  }
-  ,
-  .display-5 {
-    font-size: 3rem;
-  }
-  ,
-  .display-6 {
-    font-size: 2.5rem;
-  }
+@font-face {
+  font-family: tangerine;
+  src: url('/fonts/Tangerine/Tangerine-Regular.ttf');
 }
-/* ./Responsive Typography */
+@font-face {
+  font-family: oswald;
+  src: url('/fonts/Oswald/Oswald-VariableFont_wght.ttf');
+}
+@font-face {
+  font-family: 'Source Code Pro';
+  src: url('/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf');
+}
 
 .bg-profitcreations {
   background-attachment: fixed !important;
