fixed listening effect in micro icon

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,14 +6,17 @@ body {
 @font-face {
   font-family: tangerine;
   src: url('/fonts/Tangerine/Tangerine-Regular.ttf');
+  font-display: swap;
 }
 @font-face {
   font-family: oswald;
   src: url('/fonts/Oswald/Oswald-VariableFont_wght.ttf');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Source Code Pro';
   src: url('/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf');
+  font-display: swap;
 }
 
 .bg-profitcreations {
